# Autoware_On_Embedded

./: .gitignore  .gitmodules  LICENSE  README.md  Xavier_Autoware_Setup.md  Xavier_Setup.md  diff2.patch  diff3.patch  feature.md  test.cpp  update_log.txt  verification.md
rubis_ws/deprecated/vision_darknet_detect_opencl/: CMakeLists.txt  package.xml
rubis_ws/deprecated/vision_darknet_detect_opencl/launch/: vision_darknet_detect_opencl_param.launch  vision_yolo4_tiny_detect.launch
rubis_ws/src/camera_image/: CMakeLists.txt  package.xml
rubis_ws/src/camera_image/launch/: camera_image.launch
rubis_ws/src/camera_image/src/: camera_image.cpp  camera_image_sub.cpp
rubis_ws/src/control_module/: CMakeLists.txt  package.xml
rubis_ws/src/control_module/include/control_module/: control_module.h
rubis_ws/src/control_module/launch/: control_module.launch  keyboard_control.launch  tf.launch
rubis_ws/src/control_module/src/: twist_converter.cpp
rubis_ws/src/control_module/src/control_module/: control_module.cpp  control_module_node.cpp
rubis_ws/src/controller/: CMakeLists.txt  README.md  package.xml
rubis_ws/src/controller/cfg/: controller.yaml
rubis_ws/src/controller/launch/: cur_vel_plot.launch  pid_controller.launch  pid_controller_test.launch
rubis_ws/src/controller/src/: controller.cpp
rubis_ws/src/gicp_localizer/: CMakeLists.txt  README.md  package.xml
rubis_ws/src/gicp_localizer/include/gicp_localizer/: gicp.h  (+1 more)
rubis_ws/src/gicp_localizer/launch/: lexus.launch  map_loader.launch  points_downsample.launch  static_tf.launch  vgicp.launch
rubis_ws/src/gicp_localizer/src/: gicp.cpp
rubis_ws/src/gicp_localizer/urdf/: lexus.urdf
rubis_ws/src/gnss_converter/: CMakeLists.txt  README.md  package.xml
rubis_ws/src/gnss_converter/cfg/: gnss_converter.yaml  ntrip_client.yaml
rubis_ws/src/gnss_converter/launch/: gnss_pose_pub.launch  ntrip_client.launch
rubis_ws/src/gnss_converter/src/: gnss_converter.cpp  gnss_pose_pub.cpp  ntrip_client.cpp  position_pub.cpp  quaternion_euler.cpp
rubis_ws/src/gnss_module/: CMakeLists.txt  package.xml
rubis_ws/src/gnss_module/cfg/: kalman_filter.yaml
rubis_ws/src/gnss_module/include/: LKF.h  LKF.hpp  gnss_module.hpp  quaternion_euler.h
rubis_ws/src/gnss_module/launch/: gnss_module.launch
rubis_ws/src/gnss_module/src/: LKF.cpp  LLH2UTM.cpp  gnss_module.cpp  gnss_module_node.cpp  quaternion_euler.cpp
rubis_ws/src/inertiallabs_ins/: CMakeLists.txt  package.xml
rubis_ws/src/inertiallabs_ins/launch/: ins.launch
rubis_ws/src/inertiallabs_msgs/: CMakeLists.txt  README.md  package.xml
rubis_ws/src/inertiallabs_msgs/msg/: gps_data.msg  ins_data.msg
rubis_ws/src/ins_twist_generator/: CMakeLists.txt  README.md  package.xml
rubis_ws/src/ins_twist_generator/launch/: dynamic_ins_twist_generator.launch  ins_twist_generator.launch
rubis_ws/src/ins_twist_generator/src/: dynamic_ins_twist_generator.cpp  ins_twist_generator.cpp
rubis_ws/src/rubis_autorunner/: CMakeLists.txt  README.md  package.xml
rubis_ws/src/rubis_autorunner/launch/: carla_full_autorunner.launch  carla_lkas_autorunner.launch  cubetown_autorunner.launch  cubetown_autorunner_gpu.launch  cubetown_autorunner_gpu_test.launch  cubetown_full_autorunner.launch  cubetown_lkas_autorunner.launch  desktop_lane_keeping.launch  exynos_carla_full_autorunner.launch  exynos_carla_lkas_autorunner.launch  lgsvl_triple_lidar_autorunner.launch  minicar_2142_lane_keeping.launch  minicar_lane_keeping.launch  rubis_testbed_autorunner.launch  tutorial_autorunner.launch
rubis_ws/src/rubis_logger/: CMakeLists.txt  package.xml
rubis_ws/src/rubis_logger/cfg/: logger_brake_dist.yaml  rubis_logger.yaml
rubis_ws/src/rubis_logger/launch/: logger_brake_dist.launch  logger_brake_dist_param.launch  logger_topic.launch
rubis_ws/src/rubis_logger/src/: logger_brake_dist.cpp  logger_topic.cpp  rubis_logger.cpp
rubis_ws/src/rubis_logger_msgs/: CMakeLists.txt  package.xml
rubis_ws/src/rubis_logger_msgs/msg/: rubis_log_handler.msg
rubis_ws/src/rubis_pkg/: CMakeLists.txt  package.xml
rubis_ws/src/rubis_pkg/cfg/: borregas_stop_line.yaml  borregas_traffic_light.yaml  fake_object_generator.yaml  fake_stop_line.yaml  fake_traffic_light.yaml  testbed_stop_line.yaml  testbed_traffic_light.yaml
rubis_ws/src/rubis_pkg/include/: gnss_localizer.h
rubis_ws/src/rubis_pkg/launch/: TF_test.launch  camera_republisher.launch  fake_current_pose.launch  fake_object_generator.launch  fake_traffic_signal_generator.launch  gnss_localizer.launch  gnss_republisher.launch  lgsvl_traffic_signal_test.launch  lidar_republisher.launch  lidar_republisher_params.launch  test_static_tf_launch.launch  twist_cmd_publisher.launch  vel_pose_connect.launch  vel_pose_connect_params.launch
rubis_ws/src/rubis_pkg/scripts/: center_offset_logger.py  center_offset_viz.py  collect_gnss_ndt_pose.py  get_transformation_matrix.py
rubis_ws/src/rubis_pkg/src/: TF_test.cpp  camera_republisher.cpp  fake_current_pose.cpp  fake_object_generator.cpp  fake_object_generator_origin.cpp  fake_traffic_signal_generator.cpp  gnss_localizer.cpp  gnss_localizer_node.cpp  gnss_republisher.cpp  keyboard_controller.py  lgsvl_traffic_signal_test.py  lidar_republisher.cpp  lkas_combiner.cpp  rubis_pose_relay.cpp  rubis_relay.cpp  rubis_vel_relay.cpp  twist_cmd_publisher.cpp
rubis_ws/src/sensing_utils/: CMakeLists.txt  README.md  package.xml
rubis_ws/src/sensing_utils/src/: ins_sync.cpp  ins_sync_test.cpp  odom_converter.cpp  quaternion_to_rpy.cpp  yaw_offset_calculator.cpp
rubis_ws/src/svl_pkg/: CMakeLists.txt  package.xml
rubis_ws/src/svl_pkg/include/: svl_sensing.h
rubis_ws/src/svl_pkg/launch/: svl_sensing.launch
rubis_ws/src/topic_tools/: CMakeLists.txt
rubis_ws/src/topic_tools/src/: relay.cpp
rubis_ws/src/topic_tools/test/: delete_mux.test  mux.test  mux_add.test  mux_initial_none.test  mux_initial_other.test  throttle_simtime_loop.test
rubis_ws/src/vision_workloads/: CMakeLists.txt  package.xml
rubis_ws/src/vision_workloads/include/: lane_detector.hpp
rubis_ws/src/vision_workloads/launch/: lane_detector.launch
(+1455 files in other folders)
