<?xml version="1.0"?>
<package format="2">
  <name>camera_image</name>
  <version>0.0.0</version>
  <description>The camera_image package</description>

  <maintainer email="kite9240@todo.todo">kite9240</maintainer>

  <license>Apache 2</license>


  <buildtool_depend>catkin</buildtool_depend>


<build_depend>message_generation</build_depend>
<build_depend>rubis_lib</build_depend>
<build_export_depend>message_generation</build_export_depend>
<build_export_depend>rubis_lib</build_export_depend>
<exec_depend>message_runtime</exec_depend>
<exec_depend>rubis_lib</exec_depend>
<depend>libopencv-dev</depend>
<depend>image_transport</depend>
<depend>cv_bridge</depend>
</package>