<?xml version="1.0"?>
<package format="2">
  <name>gnss_module</name>
  <version>0.0.0</version>
  <description>The gnss_module package</description>

  <maintainer email="kite9240@todo.todo">HayeonP</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rubis_msgs</depend>
  <depend>inertiallabs_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf</depend>
  <depend>eigen</depend>
</package>