<?xml version="1.0"?>
<package>
  <name>inertiallabs_msgs</name>
  <version>1.0.0</version>
  <description>The Inertial Labs Message package</description>

 <maintainer email="omprakashpatro@gmail.com">Omprakash Patra</maintainer>
  <url type="website">http://exmaple.com</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
