<?xml version="1.0"?>
<package format="2">
  <name>ins_twist_generator</name>
  <version>0.0.0</version>
  <description>The ins_twist_generator package</description>

  <maintainer email="kite9240@gmail.com">HayeonP</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rubis_msgs</depend>
  <depend>tf</depend>
  <depend>can_data_msgs</depend>
  <depend>message_filters</depend>
  <depend>geometry_msgs</depend>
  <depend>inertiallabs_msgs</depend>
  <depend>eigen</depend>

</package>

