<?xml version="1.0"?>
<package format="2">
  <name>rubis_autorunner</name>
  <version>0.0.0</version>
  <description>The rubis_autorunner package</description>

  <maintainer email="jwhan@todo.todo">jwhan</maintainer>

  <license>Apache 2</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>visualization_msgs</depend>
  <depend>nmea_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
