<?xml version="1.0"?>
<package format="2">
  <name>rubis_logger</name>
  <version>0.0.0</version>
  <description>The rubis_logger package</description>

  <maintainer email="hypark@todo.todo">hypark</maintainer>
  <maintainer email="akyeast@gmail.com">dmshin</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>can_data_msgs</depend>
  <depend>rubis_logger_msgs</depend>
</package>
